# combosutils-rs

./: Cargo.toml
.cargo/: config.toml
src/: cmd.rs  main.rs
src/core/: core.rs  lines_processor.rs  mod.rs  task.rs  utils.rs
src/errors/: core_error.rs
src/processors/: compare.rs  extract_logins_passwords.rs  extract_phones.rs  merge.rs  mod.rs  remove_domain.rs  shuffle.rs  split_by_lines.rs  split_by_parts.rs
src/processors/duplicates/: extract_duplicates.rs  mod.rs  remove_duplicates_cpu.rs  remove_duplicates_mem.rs  remove_duplicates_slow.rs
src/tools/: extract_logins_passwords.rs  extract_phones.rs  merge.rs  mod.rs  remove_domain.rs  remove_duplicates_m.rs  shuffle.rs  split_by_lines.rs  split_by_parts.rs
src/tools/duplicates/: extract_duplicates.rs  mod.rs  remove_duplicates_cpu.rs  remove_duplicates_mem.rs
src/tools/remove_duplicates/: mod.rs  remove_duplicates_cpu.rs  remove_duplicates_mem.rs
