[package]
name = "combosutils"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = "0.4.19"
mimalloc = "0.1.27"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.30"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1